# casecentral

./: pyproject.toml
casecentral/: hooks.py  utils.py
casecentral/case_central/doctype/appointment_type/: appointment_type.json
casecentral/case_central/doctype/book_type/: book_type.json
casecentral/case_central/doctype/case/: case.js  case.json
casecentral/case_central/doctype/customer_appointment/: customer_appointment.js  customer_appointment.json
casecentral/case_central/doctype/lawyer_schedule/: lawyer_schedule.json
casecentral/case_central/doctype/matter/: matter.json
casecentral/case_central/doctype/nature_of_case/: nature_of_case.json
casecentral/case_central/doctype/nature_of_disposal/: nature_of_disposal.json
casecentral/fixtures/: custom_field.json  property_setter.json
casecentral/public/css/: portal.css
casecentral/www/: appointment_detail.html  appointment_detail.py  appointments.html  appointments.py  case-detail.py  case_detail.html  case_detail.py  cases.html  cases.py  matter_detail.html  matter_detail.py  matters.html  matters.py  portal_home.html  portal_home.py  upload-document.html  upload-document.py  upload_document.html  upload_document.py
