[project]
name = "casecentral"
authors = [
    { name = "4C Solutions", email = "info@4csolutions.in"}
]
description = "Legal Practice Management Application"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "docxtpl",
]

[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core:buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
